--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "log-cabin-ui",
   "version": "0.1.0",
+  "proxy": "https://log-cabin.azure-api.net",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
@@ -10,8 +11,11 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "frappe-charts": "^1.6.1",
+    "http-proxy-middleware": "^1.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-frappe-charts": "^4.0.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
